fixed icon on folder on nag menu on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1528,7 +1528,6 @@ header .widget.content p {
   width: 100%;
   margin: 0;
   padding: 0;
-  
   background-color: @color-swatch1;
 }
 
@@ -1663,6 +1662,9 @@ header .widget.content p {
 }
 
   .widget.extendednavigation ul li.folder {
+     background-image: image('/images/arrow-down.png');
+    background-position: right center;
+    background-repeat: no-repeat;
     padding: 16px 0;
   }
 
@@ -1679,9 +1681,7 @@ header .widget.content p {
 
 .widget.extendednavigation ul li.folder .text:hover {
     color: @font-swatch6-color-hover;
-    background-image: image('/images/arrow-down.png');
-    background-position: right 13px;
-    background-repeat: no-repeat;
+   
 }
 
 
